<resources>
    <string name="app_name">ShapeDetection</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_title_default">Title</string>
    <string name="fragment_title_base_image">Original Image</string>
    <string name="fragment_title_blur_image">Blurred Image</string>
    <string name="fragment_title_canny_edges">Edges Detected</string>
    <string name="fragment_title_contours">Contours Detected</string>
    <string name="preference_category_blur">Blur Image settings</string>
    <string name="preference_key_blur_kernel">preferenceKeyBlurKernel</string>
    <string name="preference_title_blur_kernel">Kernel Size</string>
    <string name="preference_summary_blur_kernel">kernel size used for blurring the image</string>
    <string name="preference_dialog_title_blur_kernel">Enter blur kernel size</string>
    <string name="preference_category_canny">Canny Edge Detection Settings</string>
    <string name="preference_key_canny_otsu">PreferenceKeyCannyOtsu</string>
    <string name="preference_title_canny_otsu">Use OTSU threshold</string>
    <string name="preference_summary_canny_otsu">If enabled, uses otsu threshold for canny edge detection</string>
    <string name="preference_key_canny_threshold_min">PreferenceKeyCannyThresholdMin</string>
    <string name="preference_title_canny_threshold_min">Canny Min Threshold</string>
    <string name="preference_summary_canny_threshold_min">min threshold to be used for canny edge detection</string>
    <string name="preference_dialog_title_canny_threshold_min">Min Threshold</string>
    <string name="preference_key_canny_threshold_max">PreferenceKeyCannyThresholdMax</string>
    <string name="preference_title_canny_threshold_max">Canny Max Threshold</string>
    <string name="preference_summary_canny_threshold_max">max threshold to be used for canny edge detection</string>
    <string name="preference_dialog_title_canny_threshold_max">Max Threshold</string>
    <string name="preference_default_value_blur_kernel">3</string>
    <string name="preference_default_value_canny_threshold_min">30</string>
    <string name="preference_default_value_canny_threshold_max">200</string>
    <string name="preference_category_contours">Contours Detection</string>
    <string name="preference_key_contours_type">PreferenceKeyContoursType</string>
    <string name="preference_title_contours_type">Type</string>
    <string name="preference_summary_contours_type">contours detection type</string>
    <string name="preference_dialog_title_contours_type">Select Contours Type</string>
    <string name="preference_entries_contours_type_external">EXTERNAL</string>
    <string name="preference_entries_contours_type_tree">TREE</string>
    <string name="preference_entries_contours_type_list">LIST</string>
    <string name="preference_entries_contours_type_ccomp">CCOMP</string>
    <string name="preference_entries_contours_type_floodfill">FLOOD FILL</string>
    <string name="preference_entry_value_contours_type_external">0</string>
    <string name="preference_entry_value_contours_type_list">1</string>
    <string name="preference_entry_value_contours_type_ccomp">2</string>
    <string name="preference_entry_value_contours_type_tree">3</string>
    <string name="preference_entry_value_contours_type_floodfill">4</string>
    <string name="preference_key_contours_ignore_area_size">PreferenceKeyContoursIgnoreAreaSize</string>
    <string name="preference_title_contours_ignore_area_size">Ignore Area size</string>
    <string name="preference_summary_contours_ignore_area_size">Ignore shapes with area size less than this value</string>
    <string name="preference_dialog_title_contours_ignore_area_size">Enter area size to ignore</string>
    <string name="preference_default_contours_ignore_area_size">3000</string>
    <string name="preference_key_contours_ignore_concave">PreferenceKeyContoursIgnoreConcave</string>
    <string name="preference_title_contours_ignore_concave">Ignore concave shapes</string>
    <string name="preference_summary_contours_ignore_concave">Enabling this will ignore any shapes that are concave</string>
    <string name="preference_key_contours_draw_filtered_shapes">PreferencesKeyContoursDrawFilteredShapes</string>
    <string name="preference_title_contours_draw_filtered_shapes">Draw filtered Shapes</string>
    <string name="preference_summary_contours_draw_filtered_shapes">Draw all the filtered contours from above settings</string>

</resources>
